# lenovo-throttling-fix

./: MANIFEST.in  lenovo-throttling-fix.spec  setup.cfg  setup.py
lenovo_throttling_fix/: main.py
systemd/: lenovo_throttling_fix.service
