[metadata]
name = lenovo_throttling_fix
version = 0.3
description = Workaround for Linux throttling issues on Lenovo T480 / T480s / X1C6 notebooks
long_description =
    A workaround for Linux throttling issues on Lenovo T480 / T480s / X1C6
    notebooks as described at
    https://www.reddit.com/r/thinkpad/comments/870u0a/t480s_linux_throttling_bug/.

    This forces the CPU package power limit (PL1/2) to 44 W (29 W on battery)
    and the temperature trip point to 95 'C (85 'C on battery) by overriding
    default values in MSR and MCHBAR every 5 seconds (30 on battery) to block
    the Embedded Controller from resetting these values to default.

author = Francesco Palmarini
license = MIT
url = https://github.com/erpalma/lenovo-throttling-fix
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: Linux
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    lenovo_throttling_fix = lenovo_throttling_fix.main:main

